kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata: {name: demo-api, namespace: sre-lab, labels: {app: demo-api}}
spec:
  selector: {app: demo-api}
  ports:
    - {name: http, port: 8080, targetPort: http}
  type: NodePort
