kubernetes/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: demo-api, namespace: sre-lab}
spec:
  podSelector: {matchLabels: {app: demo-api}}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector: {}
      ports: [{protocol: TCP, port: 8080}]
  egress:
    - to:
        - namespaceSelector: {}
      ports: [{protocol: UDP, port: 53}, {protocol: TCP, port: 53}]
